test/parse/module/bad-global-binding.txt
;;; ERROR: 1
(module (global $n $foo))
(;; STDERR ;;;
parse/module/bad-global-binding.txt:2:20: syntax error, unexpected VAR, expecting VALUE_TYPE
;;; STDERR ;;)
